n8n/yn8n_deploy_w_pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: n8n
  name: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      service: n8n
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: n8n
    spec:
      containers:
        - command:
            - /bin/sh
          args:
            - -c
            - sleep 5; n8n start
          image: quay.io/kenghua_yeo/yn8n:v1.3
          name: n8n
          ports:
            - containerPort: 5678
          resources:
            requests:
              memory: "250Mi"
            limits:
              memory: "500Mi"

          volumeMounts:
            - name: n8n-data
              mountPath: /home/node/.n8n
            - name: n8n-cache
              mountPath: /.cache
      volumes:
        - name: n8n-cache
          emptyDir: {}
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-data-pvc

      restartPolicy: Always
