n8n/yn8n_route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: n8n
  labels:
    service: n8n
spec:
  to:
    kind: Service
    name: n8n
    weight: 100
  port:
    targetPort: 5678
  tls:
    termination: edge
  wildcardPolicy: None
